--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "private": true,
   "dependencies": {
     "@sap/cds": "^7",
+    "@sap/cds-hana": "^2.0.0",
     "express": "^4"
   },
   "devDependencies": {
@@ -19,5 +20,10 @@
   },
   "sapux": [
     "app/cap_risks"
-  ]
+  ],
+  "cds": {
+    "requires": {
+      "db": "hana"
+    }
+  }
 }
